--- a/test.html
+++ b/test.html
@@ -8,15 +8,16 @@
 </head>
 
 <body>
-    <div class="banner">
-        <div class="container">
-            <div id="text_1">
-                <h1>Quiz title. Needs some more text</h1>
-            </div>
+    <div class="header">
+        <div id="text_1">
+            <h1>Quiz title. Needs some more text</h1>
         </div>
-        <img src="https://via.placeholder.com/300x100" />
+        <div class="container">
+            <img src="https://via.placeholder.com/300x100" />
+        </div>
     </div>
-
-    <div class="container"></div>
-    </div>
+    <div class="qblock"></div>
+    <div class="qblock"></div>
+    <div class="qblock"></div>
+    <div class="qblock"></div>
 </body>
