--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="d-flex justify-content-center">
           <div class="about-title m-5">
             <h1 style="font-size: 6rem;"><strong>Gideon Berridge</strong></h1>
-            <h2>Full stack web developer</h2>
+            <h2 class="subheading">Full stack web developer</h2>
           </div>
         
 
