About section added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <h1 style="font-size: 6rem;"><strong>Gideon Berridge</strong></h1>
             <h2 class="subheading">Full stack web developer</h2>
           </div>
+          <div>
+            <h3>About</h3>
+          </div>
         
 
           
