centered all text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container">
 
     <!-- About -->
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center flex-column about">
           <div class="about-title m-5">
             <h1 style="font-size: 6rem;"><strong>Gideon Berridge</strong></h1>
             <h2 class="subheading">Full stack web developer</h2>
