--- a/index.html
+++ b/index.html
@@ -58,19 +58,20 @@
         
 
     <!-- Projects (screenshot of refuge, video of vinyltracer-->
-        <section class="projects"> 
-          <div class="d-flex justify-content-center">
-            <div class="projects-card">
-              <img src="img/vinyltracer_screenshot.jpg" />
-              <h2>Title</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Amet commodo nulla facilisi nullam. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices
-                eros.
-                Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Vitae tortor condimentum lacinia quis vel eros donec.
-                Commodo quis imperdiet massa tincidunt. Aenean et tortor at risus viverra adipiscing at in. Pellentesque dignissim
-                enim
-              </p>
-            </div>
+        <section> 
+          <div class="d-flex justify-content-center flex-column">
+            <h3 class="projects-title">Projects</h3>
+              <div class="projects-card projects">
+                <img src="img/vinyltracer_screenshot.jpg" />
+                <h2>Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                  aliqua. Amet commodo nulla facilisi nullam. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices
+                  eros.
+                  Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Vitae tortor condimentum lacinia quis vel eros donec.
+                  Commodo quis imperdiet massa tincidunt. Aenean et tortor at risus viverra adipiscing at in. Pellentesque dignissim
+                  enim
+                </p>
+              </div>
           </div>
         </section>
     <!-- skills / tech stack (icons)-->
