--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
               <h3 class="mb-5">About</h3>
               <div class="d-flex justify-content-center">
                 <div class="projects-card">
-                  <img src="img/profile_pic.jpg" />
                   <h2>Title</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna
@@ -46,7 +45,7 @@
                     amet
                     consectetur adipiscing elit pellentesque. Lacus vestibulum sed arcu non odio euismod lacinia at quis. Congue
                     quisque
-                    egestas diam in arcu. Vulputate sapien nec sagittis aliquam malesuada bibendum. Ipsum faucibus vitae aliquet nec
+                    egestas arcu. Vulputate sapien nec sagittis aliquam malesuada bibendum. Ipsum faucibus vitae aliquet nec
                     ullamcorper.</p>
                 </div>
               </div>
