--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div>
               <h3 class="mb-5">About</h3>
               <div class="d-flex justify-content-center">
-                <div class="projects-card">
+                <div class="projects-card --fadeout">
                   <h2>Title</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna
