fade in js added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div>
               <h3 class="mb-5">About</h3>
               <div class="d-flex justify-content-center">
-                <div class="projects-card --fadeout">
+                <div class="projects-card">
                   <h2>Title</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna
@@ -60,7 +60,7 @@
         <section> 
           <div class="d-flex justify-content-center flex-column">
             <h3 class="projects-title">Projects</h3>
-              <div class="projects-card projects">
+              <div class="projects-card projects  --fadeout">
                 <img src="img/vinyltracer_screenshot.jpg" />
                 <h2>Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
