--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         <section> 
           <div class="d-flex justify-content-center flex-column">
             <h3 class="projects-title">Projects</h3>
-            <div class="projects-card projects">
+            <div class="projects-card">
               <img src="img/vinyltracer_screenshot.jpg" />
             
           
-              <div class="projects-card  projects__text --fadein">
+              <div class="projects__text --textFade">
                 <h2>Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                   aliqua. Amet commodo nulla facilisi nullam. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices
