reorganised scss files

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <!-- About -->
         <section>
-          <div class="d-flex justify-content-center flex-column about">
+          <div class="d-flex justify-content-center flex-column u-center-text">
             <div class="about-title">
               <h1 style="font-size: 6rem;"><strong>Gideon Berridge</strong></h1>
-              <h2 class="subheading">Full stack web developer</h2>
+              <h2 class="subheading u-center-text">Full stack web developer</h2>
             </div>
             <div>
               <h3 class="mb-5">About</h3>
