reorganised scss folders

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Projects (screenshot of refuge, video of vinyltracer-->
         <section> 
           <div class="d-flex justify-content-center flex-column">
-            <h3 class="projects-title">Projects</h3>
+            <h3 class="u-title-margin u-center-text">Projects</h3>
             <div class="projects-card">
               <img src="img/vinyltracer_screenshot.jpg" class="--imgFade"/>
             
