--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div>
               <h3 class="mb-5">About</h3>
               <div class="d-flex justify-content-center">
-                <div class="projects-card">
+                <div class="projects__card">
                   <h2>Title</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna
@@ -60,11 +60,11 @@
         <section> 
           <div class="d-flex justify-content-center flex-column">
             <h3 class="u-title-margin u-center-text">Projects</h3>
-            <div class="projects-card">
+            <div class="projects__card">
               <img src="img/vinyltracer_screenshot.jpg" class="--imgFade"/>
             
           
-              <div class="projects__text --textFade">
+              <div class="projects__card--text --textFade">
                 <h2>Title </h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                   aliqua. Amet commodo nulla facilisi nullam. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices
