--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div> -->
             
             <div class="projects__card">
-              <img src="img/vinyltracer_screenshot.jpg" class="--imgFade"/>
+              <img src="img/vinyltracer_screenshot.jpg" class="--imgFade composition__photo--2"/>
               <div class="projects__card--text --textFade">
                 <h2>Title </h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -80,7 +80,7 @@
               </div>
             </div>
             <div class="projects__card">
-              <img src="img/refuge_screenshot.jpg" class="--imgFade"/>
+              <img src="img/refuge_screenshot.jpg" class="--imgFade composition composition__photo--1"/>
               <div class="projects__card--text --textFade">
                 <h2>Title </h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -93,7 +93,7 @@
               </div>
             </div>
             <div class="projects__card">
-              <img src="img/spanner_screenshot.jpg" class="--imgFade"/>
+              <img src="img/spanner_screenshot.jpg" class="--imgFade composition__photo--3"/>
               <div class="projects__card--text --textFade">
                 <h2>Title </h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
