--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             
             <div class="projects__card story">
               <img src="img/refuge_screenshot.jpg" class="story__img"/>
-              <div class="projects__card--text ">
-                <figcaption class="story__caption">Refuge</figcaption>
+              <figcaption class="story__caption">Refuge</figcaption>
+              <div class="projects__card--text "></div>
                 <!-- <h2>Title </h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                   aliqua. Amet commodo nulla facilisi nullam. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices
@@ -97,9 +97,9 @@
 
             <div class="projects__card story">
               <img src="img/spanner_screenshot.jpg" class="story__img"/>
+              <figcaption class="story__caption">Dan Spanner</figcaption>
               <div class="projects__card--text">
-                <figcaption class="story__caption">Dan Spanner</figcaption>
-                <!-- <h2>Title </h2>
+              <!-- <h2>Title </h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                   aliqua. Amet commodo nulla facilisi nullam. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices
                   eros.
