--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <div class="d-flex justify-content-center">
                 <div class="projects__card">
                   <h2>Title</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  <p>Lorem ipsum dolor sit, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     magna
                     aliqua. Amet commodo nulla facilisi nullam. Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices
                     eros.
