overide bootstrap navbar

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body style="background: rgb(254, 249, 226);">
     <!-- navbar -->
       <div class="navbar header">
-        <a href="#about" class="nav-text">About</a>
-        <a href="#projects" class="nav-text">Projects</a>
-        <a href="#contact" class="nav-text">Contact</a>
+        <a href="#about" class="navbar__text">About</a>
+        <a href="#projects" class="navbar__text">Projects</a>
+        <a href="#contact" class="navbar__text">Contact</a>
       </div>
 
       <div class="container">
