--- a/index.html
+++ b/index.html
@@ -63,8 +63,18 @@
 
         <!-- Skills - short section thumbnails of languauge icons -->
         <section>
-          <h3 class="m-5">Skills</h3>
-          <div
+          <!-- <h3 class="m-5">Skills</h3> -->
+          <div class="grid mt-5">
+            <div class="grid__title">Languages
+              <div class="grid__title--item">Ruby</div>
+            </div>
+              
+            <div class="grid__title">Frameworks
+
+            </div>
+            <div class="grid__title">Tools
+              
+          </div>
 
 
         </section>
