--- a/index.html
+++ b/index.html
@@ -99,12 +99,7 @@
               <div class="row">
                 <img src="./img/Rails.png">
                 <div class="grid__item">Rails
-                </div>
               </div>
-              <div class="row">
-                <img src="./img/React.png">
-                <div class="grid__item">React
-                </div>
               </div>
               <div class="row">
                 <img src="./img/sass.png">
@@ -114,6 +109,11 @@
               <div class="row">
                 <img src="./img/bootstrap.png">
                 <div class="grid__item">Bootstrap
+                </div>
+              </div>
+              <div class="row">
+                <img src="./img/React.png">
+                <div class="grid__item">React
                 </div>
               </div>
 
@@ -130,7 +130,7 @@
                 </div>
               </div>
               <div class="row">
-                <img src="./img/JS.png">
+                <img src="./img/postgresql.png">
                 <div class="grid__item">PostgreSQL
                 </div>
               </div>
