--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
               <div class="grid__title">Languages</div>
               <div class="grid__title">Frameworks</div>
-              <div class="grid__title">Tools</div>
+              <div class="grid__title grid__title--tools">Tools</div>
               
               <div class="grid__item">
                 <img src="./img/JS.png">
