--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
-  <body style="background: rgb(254, 249, 226);">
+  <body>
 
     <!-- navbar -->
     <section>
@@ -26,16 +26,16 @@
 
         <section>
           <div class="about-title">
-            <h1 style="font-size: 6rem;"><strong>Gideon Berridge</strong></h1>
-            <h2 class="subheading u-center-text">Full stack web developer</h2>
+            <h1 class="heading-primary--main">Gideon Berridge</h1>
+            <h2 class="u-center-text heading-primary--sub">Full stack developer</h2>
           </div>
         </section>
         
         <!-- About -->
 
         <section id="about">
-          <div>
-            <h3 class="mb-5">About</h3>
+          <div class="fadeUp">
+            <h2 class="mb-5">About</h2>
             <div class="d-flex justify-content-center">
               <div class="projects__card">
                 <h2>Title</h2>
@@ -68,7 +68,7 @@
         <!-- Skills - short section thumbnails of languauge icons -->
         <section id="skills">
           <div class="d-flex justify-content-center">
-            <div class="grid mt-5">
+            <div class="grid mt-5 fadeUp">
     
               <div class="grid__title">Languages</div>
               <div class="grid__title">Frameworks</div>
