--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <!-- About -->
 
-        <section id="about"  class="background-light skew">
+        <section id="about"  class="background-orange skew">
           <div class="fadeUp unSkew u-margin-top-bottom">
             <h2 class="mb-5">About</h2>
             <div class="d-flex justify-content-center">
@@ -138,9 +138,9 @@
         
 
     <!-- Projects (screenshot of refuge, video of vinyltracer-->
-        <section id="projects" class="background-light unSkew "> 
+        <section id="projects" class="background-orange u-clip-path-projects"> 
 
-          <div class=" skew u-margin-top-bottom">
+          <div class="u-margin-top-bottom  ">
             <!-- <div class="d-flex justify-content-center flex-column"> -->
               <h3 class="u-center-text mb-5">Projects</h3>
             <!-- </div> -->
@@ -196,7 +196,7 @@
         </section>
 
     <!-- footer -->
-        <footer>
+        <footer class="footer background-light">
           <div>Icons made by <a href="https://www.flaticon.com/authors/ayub-irawan" title="Ayub Irawan">Ayub Irawan</a> from <a
               href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         </footer>
