--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                   consectetur adipiscing elit pellentesque. Lacus vestibulum sed arcu non odio euismod lacinia at quis. Congue
                   quisque
                   egestas arcu. </p>
-                <p>
-                  <a href="./text/GideonBerridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download"
-                  ><img src="./img/download_2.png" class="projects__card--download-img">Download CV</a>
+                <p class="">
+                  <a href="./text/GideonBerridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download projects__card--icons"
+                  ><img src="./img/download_2.png" style="filter: invert(100%);" class="projects__card--download-img projects__card--icons"> Download CV</a>
                 </p>
               </div>
             </div>
@@ -199,7 +199,7 @@
 
 
     <!-- footer -->
-        <footer class="footer background-light">
+        <footer class="footer">
           <div>Icons made by <a href="https://www.flaticon.com/authors/ayub-irawan" title="Ayub Irawan">Ayub Irawan</a> from <a
               href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         </footer>
