--- a/index.html
+++ b/index.html
@@ -200,8 +200,18 @@
 
     <!-- footer -->
         <footer class="footer">
-          <div>Icons made by <a href="https://www.flaticon.com/authors/ayub-irawan" title="Ayub Irawan">Ayub Irawan</a> from <a
-              href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+          <div class="footer__icons">
+
+          </div>
+          <div class="footer__text justify-content-between">
+            <div class="footer__text--email">
+              gid.berridge@gmail.com
+            </div>
+            <div class="">Icons made by <a href="https://www.flaticon.com/authors/ayub-irawan" title="Ayub Irawan">Ayub Irawan</a> from <a
+                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            </div>
+            
+          </div>
         </footer>
 
     <script src="index.js"></script>
