--- a/index.html
+++ b/index.html
@@ -202,20 +202,19 @@
         <footer class="footer">
           <div class="footer__icons">
             <p class="mt-3">
-              <a href="https://github.com/GidBerridge"><img src="./img/github.svg"
+              <a href="https://github.com/GidBerridge" class="footer__icons--items"><img src="./img/github.svg"
                   class="footer__icons--items u-filter-invert"> GitHub</a>
             </p>
             <p class="">
-              <a href="https://www.linkedin.com/in/gideon-berridge/" ><img src="./img/linkedin.svg"
-                  class="footer__icons--items ml-2 u-filter-invert"> LinkedIn</a>
+              <a href="https://www.linkedin.com/in/gideon-berridge/" class="footer__icons--items"><img src="./img/linkedin.svg"
+                  class="ml-2 u-filter-invert"> LinkedIn</a>
             </p>
           </div>
           
 
           <div class="footer__text justify-content-between">
-            <div class="footer__text--email ">
-              
-              <address><a href="mailto:gid.berridge@gmail.com"><img src="./img/email.png" class="u-filter-invert" style="width: 2rem;">
+            <div class="footer__text--email"> 
+              <address><a href="mailto:gid.berridge@gmail.com" class="footer__icons--items"><img src="./img/email.png" class="u-filter-invert" style="width: 2rem;">
                 gid.berridge@gmail.com</a></address>
             </div>
                 <div>Icons made by <a href="https://www.flaticon.com/authors/ayub-irawan" title="Ayub Irawan">Ayub Irawan</a> and <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a
