--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <address><a href="mailto:gid.berridge@gmail.com" class="footer__icons--items"><img src="./img/email.png" class="u-filter-invert" style="width: 2rem;">
                 gid.berridge@gmail.com</a></address>
             </div>
-                <div>Icons made by <a href="https://www.flaticon.com/authors/ayub-irawan" title="Ayub Irawan">Ayub Irawan</a> and <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a
+                <div class="footer__text--credits">Icons made by <a href="https://www.flaticon.com/authors/ayub-irawan" title="Ayub Irawan">Ayub Irawan</a> and <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a
                     href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
             </div>
             
