--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- About -->
 
         <section id="about"  class="background-light u-clip-path-about">
-          <div class="fadeUp u-padding-top-bottom">
+          <div class="fadeUp u-padding-top-bottom-big">
             <h2 class="mb-5">About</h2>
             <div class="d-flex justify-content-center">
               <div class="projects__card projects__card--about">
