--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <!-- footer -->
         <footer class="footer">
-          <div class="footer__icons">
+          <div class="footer__icons mt-3">
             <p class="">
               <a href="https://github.com/GidBerridge" class="footer__icons--items"><img src="./img/github.svg"
                   class="footer__icons--items u-filter-invert"> GitHub</a>
