--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="grid">
 
               <div class="grid__column">
-                <div class="grid__title">Languages</div>
+                <div class="grid__title grid__title--languages">Languages</div>
                 <div class="grid__item">
                   <img src="./img/JS.png">
                   <div>JavaScript</div>
@@ -152,7 +152,7 @@
               </div>
               
               <div class="grid__column">
-                <div class="grid__title">Frameworks</div>
+                <div class="grid__title grid__title--frameworks">Frameworks</div>
                 <div class="grid__item">
                   <img src="./img/Rails.png">
                   <div>Rails</div>
