--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!-- navbar -->
     <section>
       <div class="header">
-        <div class="navbar">
+        <nav class="navbar">
           <a href="#about" class="navbar__text">About</a>
           <a href="#projects" class="navbar__text">Projects</a>
           <a href="#skills" class="navbar__text">Skills</a>
           <a href="#contact" class="navbar__text">Contact</a>         
-        </div>
+        </nav>
       </div>
     </section>
 
