--- a/index.html
+++ b/index.html
@@ -15,10 +15,25 @@
     <section>
       <div class="header">
         <nav class="navbar">
-          <a href="#about" class="navbar__text">About</a>
-          <a href="#projects" class="navbar__text">Projects</a>
-          <a href="#skills" class="navbar__text">Skills</a>
-          <a href="#contact" class="navbar__text">Contact</a>         
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="#about" class="navbar__text">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#projects" class="navbar__text">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#skills" class="navbar__text">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="navbar__text">Contact</a>  
+            </li>
+          </ul>
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
         </nav>
       </div>
     </section>
