--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- navbar -->
     <section>
-      <div class="header">
+      <header class="header">
         <nav class="navbar">
           <ul class="nav-menu">
             <li class="nav-item">
@@ -35,7 +35,7 @@
             <span class="bar"></span>
           </div>
         </nav>
-      </div>
+      </header>
     </section>
 
       <div class="d-flex justify-content-center flex-column u-center-text">
