--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
     <section>
       <header class="header">
         <nav class="navbar">
-          <ul class="nav-menu">
-            <li class="nav-item">
-              <a href="#about" class="navbar__text">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="#projects" class="navbar__text">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a href="#skills" class="navbar__text">Skills</a>
-            </li>
-            <li class="nav-item">
-              <a href="#contact" class="navbar__text">Contact</a>  
-            </li>
-          </ul>
+          <div class="d-flex justify-content-center w-100">
+            <ul class="nav-menu">
+              <li class="nav-item">
+                <a href="#about" class="navbar__text">About</a>
+              </li>
+              <li class="nav-item">
+                <a href="#projects" class="navbar__text">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a href="#skills" class="navbar__text">Skills</a>
+              </li>
+              <li class="nav-item">
+                <a href="#contact" class="navbar__text">Contact</a>  
+              </li>
+            </ul>
+          </div>
           <div class="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
