--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               </div>
               
 
-              <div class="d-flex justify-content-center">
+              <div class="d-flex justify-content-center w-100">
                 <div class="footer__icons mt-3">
                   <p>
                     <a href="https://github.com/GidBerridge" target="blank" class="footer__icons--items"><img src="./img/github.svg"
