wordpress icon added

--- a/index.html
+++ b/index.html
@@ -210,6 +210,10 @@
                     <img src="./img/Figma.png">
                     <div>Figma</div>
                   </div>
+                  <div class="grid__item">
+                    <img src="./img/wordpress.svg">
+                    <div>Wordpress</div>
+                  </div>
                 </div>
               </div>
             </div>
