--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           
         
         <section id="contact" class="section">
-          <h3 class="u-center-text m-3">Contact</h3>
+          <h2 class="u-center-text mt-3">Contact</h2>
 
       <!-- footer -->
           <footer class="footer">    
@@ -256,10 +256,9 @@
                   </p>
                 </div>
               </div>
-                  <div class="footer__text--credits">Icons made by <a href="https://www.flaticon.com/authors/ayub-irawan" target="blank" title="Ayub Irawan">Ayub Irawan</a> and <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a
+                  <!-- <div class="footer__text--credits">Icons made by <a href="https://www.flaticon.com/authors/ayub-irawan" target="blank" title="Ayub Irawan">Ayub Irawan</a> and <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a
                       href="https://www.flaticon.com/" target="blank" title="Flaticon">www.flaticon.com</a>
-                  </div>
-              </div>
+                  </div> -->
             </div>
           </footer>
         </section>
