minor text adjustments

--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
                       <img src="img/refuge_screenshot.jpg" alt="Refuge band homepage screenshot" class="projects__img" />
                       <figcaption class="projects__caption">Refuge</figcaption>
                       <div class="projects__text">
-                        <h4>HTML / CSS / Bootstrap</h4>
-                        <p class="">A static website for a band using pure HTML / CSS.
+                        <h4>HTML / CSS / JavaScript</h4>
+                        <p>A static website for a band. Features include view videos in full screen, stream tunes and purchase tickets for shows.
                         </p>
                       </div>
                     </a>
                   </div>
             
-                  <div class="slide slide--3">
+                  <!-- <div class="slide slide--3">
                     <a href="http:\\spannerhq.com" target="blank" class=" projects__card projects projects__card--slider">
                       <img src="img/spanner_screenshot.jpg" alt="Spanner HQ homepage screenshot" class="projects__img" />
                       <figcaption class="projects__caption">Spanner HQ</figcaption>
@@ -133,7 +133,7 @@
                         </p>
                       </div>
                     </a>
-                  </div>
+                  </div> -->
             
                   <button class="slider__btn slider__btn--left">&larr;</button>
                   <button class="slider__btn slider__btn--right">&rarr;</button>
