minor text tweeks

--- a/index.html
+++ b/index.html
@@ -123,17 +123,20 @@
                     </a>
                   </div>
             
-                  <!-- <div class="slide slide--3">
+                  <div class="slide slide--3">
                     <a href="http:\\spannerhq.com" target="blank" class=" projects__card projects projects__card--slider">
                       <img src="img/spanner_screenshot.jpg" alt="Spanner HQ homepage screenshot" class="projects__img" />
                       <figcaption class="projects__caption">Spanner HQ</figcaption>
                       <div class="projects__text">
                         <h4>Wordpress / CSS </h4>
-                        <p class="">A Wordpress site built using Elementor custom page builder and CSS.
+                        <p>A Wordpress site built using Elementor custom page builder and CSS to showcase various music acts and link to thier external social media sites. 
+                        </p>
+                        <p>
+                         *** The commision was for design only so the site is currently administered by the client. ***
                         </p>
                       </div>
                     </a>
-                  </div> -->
+                  </div>
             
                   <button class="slider__btn slider__btn--left">&larr;</button>
                   <button class="slider__btn slider__btn--right">&rarr;</button>
