minor text tweeks

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                       <figcaption class="projects__caption">Refuge</figcaption>
                       <div class="projects__text">
                         <h4>HTML / CSS / JavaScript</h4>
-                        <p>A static website for a band. Features include view videos in full screen, stream tunes and purchase tickets for shows.
+                        <p>A static website for a band. Features include viewing videos in full screen, streaming tunes and links to purchase tickets for shows.
                         </p>
                       </div>
                     </a>
