--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-41018996-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-41018996-1');
+    </script>
     <meta name="description" content="Portfolio page for Gideon Berridge, a London (UK) based web developer
     who works primarily with JavaScript, Ruby on rails, HTML and SCSS as well as other frameworks such as React and Bootstrap.
     Contains active links to previous work, contact details and links to GitHub and LinkedIn.">
