--- a/index.html
+++ b/index.html
@@ -143,6 +143,18 @@
                       </div>
                     </a>
                   </div>
+            
+                  <div class="slide slide--4">
+                    <a href="https://gidberridge.github.io/advance_css_natours/" target="blank" class=" projects__card projects projects__card--slider">
+                      <img src="img/natours_screenshot.jpg" alt="Bankist homepage screenshot" class="projects__img" />
+                      <h2 class="projects__caption">Natours</h2>
+                      <div class="projects__text">
+                        <h4>SCSS</h4>
+                        <p>Advanced CSS animation and hover effects. My take on a project from Jonas Schmedtmann's 'Advanced CSS and Sass' course.
+                        </p>
+                      </div>
+                    </a>
+                  </div>
                   
                   <!-- <div class="slide slide--3">
                     <a href="http:\\spannerhq.com" target="blank" class=" projects__card projects projects__card--slider">
