js files encapsulated

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script type="module" defer src="javascript/index.js"></script>
   </head>
   <body>
 
@@ -126,7 +127,7 @@
                       <h2 class="projects__caption">Refuge</h2>
                       <div class="projects__text">
                         <h4>HTML / CSS / JavaScript</h4>
-                        <p>A static website for a band. Features include viewing videos in full screen, streaming tunes and links to purchase tickets for shows.
+                        <p>A working static website for a band. Features include viewing videos in full screen, streaming tunes and links to purchase tickets for shows.
                         </p>
                       </div>
                     </a>
@@ -321,8 +322,6 @@
             </div>
           </footer>
         </section>
-
-    <script src="index.js"></script>
   </div>
   </body>
 </html>
