--- a/index.html
+++ b/index.html
@@ -80,16 +80,14 @@
                 <h4>Where did I come from?</h4>
                 <p>  
                 I started off in the music industry working as a musician, promoter and sound
-                engineer. Later on I got more techie working as a video editor and AV technician on corporate events. 
+                engineer. Later on I worked as a video editor and AV technician on corporate events. 
                 </p>
                 <h4>My journey into tech</h4>
                 <p>
-                I’ve always had a passion for learning and technology. I studied an MA in Creative Sound and Media Technology and had made several
-                Wordpress sites to promote music projects though it was after working on an event for the Raspberry Pi foundation that I
-                got really hooked. I delved into the maker culture and taught myself Python and C++ whilst making several projects using
-                Arduino’s and Raspberry Pi’s. Feeling the need for web development skills beyond basic Wordpress, I enrolled
-                on a 6 month intensive web developer bootcamp at Le Wagon. By this time time I was utterly hooked on the challenge of
-                coding and thoroughly determined to make a career change. I have been freelancing as a web developer since completing
+                I’ve always had a passion for learning and technology. At university I studied an MA in Creative Sound and Media Technology and had made several
+                Wordpress sites to promote music projects. Delving into the maker culture, I taught myself Python and C++ whilst making projects using
+                Arduino’s and Raspberry Pi’s. After studying an IoT course, I became more interested in the potential of web apps so enrolled
+                on a web developer bootcamp at Le Wagon and decided to make a career change. I have been freelancing as a web developer since succesfully completing
                 the bootcamp in September 2021.</p>
                 <p class="">
                   <a href="./text/GideonBerridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download projects__card--icons"
@@ -132,7 +130,7 @@
                     </a>
                   </div>
             
-                  <div class="slide slide--3">
+                  <!-- <div class="slide slide--3">
                     <a href="https://gidberridge.github.io/JS_demo/" target="blank" class=" projects__card projects projects__card--slider">
                       <img src="img/bankist.jpg" alt="Bankist homepage screenshot" class="projects__img" />
                       <h2 class="projects__caption">Bankist</h2>
@@ -178,7 +176,7 @@
                         </p>
                       </div>
                     </a>
-                  </div>
+                  </div> -->
                   
                   <!-- <div class="slide slide--3">
                     <a href="http:\\spannerhq.com" target="blank" class=" projects__card projects projects__card--slider">
