--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </p>
                 <h4>My journey into tech</h4>
                 <p>
-                I’ve always had a passion for learning and technology. At university I studied an MA in Creative Sound and Media Technology and had made several
+                I’ve always had a passion for learning and technology. At university I studied an MA in Creative Sound and Media Technology and made a few
                 Wordpress sites to promote music projects. Delving into the maker culture, I taught myself Python and C++ whilst making projects using
                 Arduino’s and Raspberry Pi’s. After studying an IoT course, I became more interested in the potential of web apps so enrolled
                 on a web developer bootcamp at Le Wagon and decided to make a career change. I have been freelancing as a web developer since succesfully completing
