--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 Arduino’s and Raspberry Pi’s. After studying an IoT course, I became more interested in the potential of web apps so enrolled
                 on a web developer bootcamp at Le Wagon and decided to make a career change. I have been freelancing as a web developer and working 
                 on my own projects since succesfully completing
-                the bootcamp in September 2021. Previously I worked as a musician, sound engineer and video editor. I'm enjoying the change and the challenge.</p>
+                the bootcamp in September 2021. Previously I worked as a musician, sound engineer and video editor. I'm thoroughly enjoying the change and the challenge.</p>
                 <p class="">
                   <a href="./text/GideonBerridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download projects__card--icons"
                   ><img src="./img/download_2.png" style="filter: invert(100%);" class="projects__card--download-img projects__card--icons"> Download CV</a>
