--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p>
                 I’ve always had a passion for learning and technology particularly the creative end of technology.  
                 I have also always enjoyed tinkering with things. and a few years ago became interested in the maker culture. I taught myself Python and C++ whilst making projects using
-                Arduino’s and Raspberry Pi’s. After studying an IoT course, I became more interested in the potential of web apps so enrolled
+                Arduinos and Raspberry Pi’s. After studying an IoT course, I became more interested in the potential of web apps so enrolled
                 on a web developer bootcamp at Le Wagon and decided to make a career change. I have been freelancing as a web developer and working 
                 on my own projects since succesfully completing
                 the bootcamp in 2021.</p>
