tutorial image updated

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                       <img src="img/tutorials_screenshot.jpg" alt="Tutorials homepage screenshot" class="projects__img" />
                       <h2 class="projects__caption">Tutorials Page</h2>
                       <div class="projects__text">
-                        <h4>HTML / JavaScript / SCSS</h4>
+                        <h4>React / JavaScript / SCSS / HTML</h4>
                         <p>Link to tutorials page that showcases front end techniques from various courses I've completed.
                         </p>
                       </div>
