--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 Arduinos and Raspberry Pi’s. After studying an IoT course, I became more interested in the potential of web apps so enrolled
                 on a web developer bootcamp at Le Wagon and decided to make a career change. I have been freelancing as a web developer and working 
                 on my own projects since succesfully completing
-                the bootcamp in 2021.</p>
+                the bootcamp.</p>
                 <p class="">
                   <a href="./text/GideonBerridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download projects__card--icons"
                   ><img src="./img/download_2.png" style="filter: invert(100%);" class="projects__card--download-img projects__card--icons"> Download CV</a>
@@ -150,7 +150,7 @@
                       <img src="img/tutorials_screenshot.jpg" alt="Tutorials homepage screenshot" class="projects__img" />
                       <h2 class="projects__caption">Tutorials Page</h2>
                       <div class="projects__text">
-                        <h4>React / JavaScript / SCSS / HTML</h4>
+                        <h4>React / JavaScript / SCSS</h4>
                         <p>Link to tutorials page that showcases front end techniques from various courses I've completed.
                         </p>
                       </div>
