--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
                   
             
                   <div class="slide">
+                    <a href="https://gidberridge.github.io/react-quiz/" target="blank" class=" projects__card projects projects__card--slider">
+                      <img src="img/zappaquiz_screenshot.jpg" alt="Zappa quiz homepage screenshot" class="projects__img" />
+                      <h2 class="projects__caption">ZappaQuiz</h2>
+                      <div class="projects__text">
+                        <h4>React / SCSS</h4>
+                        <p>A quiz app made in React about the musician Frank Zappa. This is a work in progress though is in a fully functional state.
+                        </p>
+                      </div>
+                    </a>
+                    <a href="https://github.com/GidBerridge/react-quiz" target="blank" class="slider__icon"><img
+                        src="./img/github.svg" alt="GitHub icon" class="u-filter-invert"></a>
+                  </div>
+
+                  <div class="slide">
                     <a href="http:\\officialrefuge.com" target="blank" class=" projects__card projects projects__card--slider">
                       <img src="img/refuge_screenshot.jpg" alt="Refuge band homepage screenshot" class="projects__img" />
                       <h2 class="projects__caption">Refuge</h2>
