problem solvig added to soft skills

--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
             <ul>
               <li>Communication</li>
               <li>Teamwork</li>
+              <li>Probem Solving</li>
               <li>Adaptability</li>
               <li>Project Management</li>
               <li>Time Management</li>
