refuge screenshot updated

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                       <h2 class="projects__caption">ZappaQuiz</h2>
                       <div class="projects__text">
                         <h4>React / SCSS</h4>
-                        <p>A quiz app made in React about the musician Frank Zappa. This is a work in progress though is in a fully functional state.
+                        <p>A quiz app made in React about the musician Frank Zappa. It uses state to keep track of the score and issues you a Zappa song title as a compliment or insult based on the result. Uses props, hooks and lifting the state.
                         </p>
                       </div>
                     </a>
