--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
                 I’ve always had a passion for learning and technology particularly the creative end of technology.  
                 I have also always enjoyed tinkering with things. and a few years ago became interested in the maker culture. I taught myself Python and C++ whilst making projects using
                 Arduinos and Raspberry Pi’s. After studying an IoT course, I became more interested in the potential of web apps so enrolled
-                on a web developer bootcamp at Le Wagon and decided to make a career change. I have been freelancing as a web developer and working 
-                on my own projects since succesfully completing
-                the bootcamp.</p>
+                on a web developer bootcamp at Le Wagon and decided to make a career change. After completing the bootcamp and freelancing for several months, I have been working as junior 
+                front end developer coding landing pages and emails for blue chip clients.</p>
                 <p class="">
                   <a href="./text/GideonBerridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download projects__card--icons"
                   ><img src="./img/download_2.png" style="filter: invert(100%);" class="projects__card--download-img projects__card--icons"> Download CV</a>
