--- a/index.html
+++ b/index.html
@@ -69,16 +69,13 @@
 
         <section id="about" class="background-light u-clip-path-about section">
           <div class="u-padding-top-bottom-big">
-            <h2 class="mb-5">About</h2>
+            <!-- <h2 class="mb-5">About</h2> -->
             <div class="d-flex justify-content-center">
-              <div class="projects__card projects__card--about">                
-                <h4>My journey into tech</h4>
-                <p>
-                I’ve always had a passion for learning and technology particularly the creative end of technology.  
-                I have also always enjoyed tinkering with things. and a few years ago became interested in the maker culture. I taught myself Python and C++ whilst making projects using
-                Arduinos and Raspberry Pi’s. After studying an IoT course, I became more interested in the potential of web apps so enrolled
-                on a web developer bootcamp at Le Wagon and decided to make a career change. After completing the bootcamp and freelancing for several months, I have been working as junior 
-                front end developer coding landing pages and emails for blue chip clients.</p>
+              <div class="projects__card projects__card--about" >                
+                <h4>About</h4>
+                <p style="text-align: left;">
+                Since completing a 6-month full stack developer boot camp last year, I have been working as a front end developer for a creative agency making landing pages and HTML emails for international clients. This involves heavy use of HTML, CSS and Bootstrap as well as Photoshop, Adobe XD, JavaScript, JQuery, Wordpress, AWS, and Eloqua. Aside from this I have made many of my own projects using React, Ruby on Rails and Python and am very interested in further exploring back end languages and JavaScript frameworks.
+<br><br>Outside of coding, I have a deep interested in music, play several instruments and have a BA in Music and an MA in Creative Sound and Media Technology. I have previously worked as a musician, sound engineer and audio visual technician as well as doing motion graphics and visuals for live bands. I also enjoy travel and pub quizes</p>
                 <p class="">
                   <a href="./text/GideonBerridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download projects__card--icons"
                   ><img src="./img/download_2.png" style="filter: invert(100%);" class="projects__card--download-img projects__card--icons"> Download CV</a>
