--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h4>About</h4>
                 <p style="text-align: left;">
                 Since completing a 6-month full stack developer boot camp a year ago, I have been working as a front end developer for a creative agency making landing pages and HTML emails for international clients. This involves heavy use of HTML, CSS and Bootstrap as well as Photoshop, Adobe XD, JavaScript, JQuery, Wordpress, AWS, and Eloqua. Aside from this I have made several of my own projects using React, Ruby on Rails and Python and would be interested in further exploring back end languages or React.
-<br><br>Outside of coding, I have a deep interest in music, play several instruments and have an MA in Creative Sound and Media Technology. I have previously worked as a musician, sound engineer and audio visual technician as well as doing motion graphics and visuals for live bands. I also love travel and pub quizzes.</p>
+<br><br>Outside of coding, I am passionate about music, play several instruments and have an MA in Creative Sound and Media Technology. I have previously worked as a musician, sound engineer and audio visual technician as well as doing motion graphics and visuals for live bands. I also love travel and pub quizzes.</p>
                 <p class="">
                   <a href="./text/GideonBerridge.pdf" download="Gideon_Berridge_CV" class="projects__card--download projects__card--icons"
                   ><img src="./img/download_2.png" style="filter: invert(100%);" class="projects__card--download-img projects__card--icons"> Download CV</a>
